[gd_scene load_steps=5 format=3 uid="uid://ctfk2cy55npka"]

[ext_resource type="Script" uid="uid://dufwd5sthrcq6" path="res://scenes/ui/game_hud.gd" id="1_el006"]
[ext_resource type="Theme" uid="uid://b36arowifsrqg" path="res://scenes/themes_and_stuff/menu_theme.tres" id="1_fnxle"]
[ext_resource type="Texture2D" uid="uid://ct2b15amwjiuy" path="res://assets/sprites/Coin-counter.png" id="2_el006"]
[ext_resource type="Texture2D" uid="uid://o8goqwo7l6dv" path="res://assets/sprites/health_full.png" id="4_8n052"]

[node name="game_hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_el006")

[node name="Score" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Score"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.57073
anchor_top = -3.50191
anchor_right = 0.231058
anchor_bottom = 2.98156
offset_left = 1522.83
offset_top = -29.9236
offset_right = 1510.76
offset_bottom = -189.262
scale = Vector2(4.725, 4.725)
texture = ExtResource("2_el006")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Score"]
layout_mode = 0
anchor_left = 43.0
anchor_top = 1.0
anchor_right = 46.745
anchor_bottom = 2.61838
offset_right = 130.2
offset_bottom = 56.265
scale = Vector2(0.535, 0.535)
theme = ExtResource("1_fnxle")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "00000"
metadata/_edit_use_anchors_ = true

[node name="HeartContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = -0.0333333
anchor_top = -0.0592593
anchor_right = 0.201198
anchor_bottom = 0.160185
offset_right = -260.3
offset_bottom = -137.0
scale = Vector2(2.37, 2.37)
theme_override_constants/separation = -68
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="HeartContainer"]
layout_mode = 2
texture = ExtResource("4_8n052")
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="HeartContainer"]
layout_mode = 2
texture = ExtResource("4_8n052")
metadata/_edit_lock_ = true

[node name="TextureRect3" type="TextureRect" parent="HeartContainer"]
layout_mode = 2
texture = ExtResource("4_8n052")
metadata/_edit_lock_ = true
